--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,10 +1,10 @@
 .home {
-    height: 1000px;
+    height: 600px;
     background: url(../images/main.jpg) no-repeat;
     background-size: cover;
-    
 
-    .container {
+    &__content {
+        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -12,34 +12,31 @@
 
     &__title {
         padding-top: 100px;
-        font-size: 50px;
+        font-size: 40px;
         margin: 0;
         text-transform: uppercase;
         font-weight: bold;
         margin-bottom: 100px;
         color: #fff;
+
+        @media (max-width: 767px) {
+            font-size: 28px;
+        }
     }
 
     &__link {
         display: block;
         color: #fff;
-        font-size: 32px;
+        font-size: 24px;
         text-decoration: none;
         border: 3px solid #fff;
-        width: 300px;
-        padding: 40px;
+        max-width: 300px;
+        padding: 20px 40px;
     }
 }
 
 .about {
-    height: 500px;
-
-    .container {
-        min-height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+    max-height: 500px;
 
     &__text {
         font-size: 30px;
@@ -57,16 +54,22 @@
     &__content {
         display: flex;
         justify-content: space-between;
+
+        @media (max-width:767px) {
+            flex-direction: column;
+        }
     }
 
     &__item {
-        width: 600px;
+        max-width: 100%;
         padding: 0 20px;
+        margin: 0 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
         border: 5px solid #F05E22;
         padding-top: 50px;
+        margin-bottom: 20px;
     }
 
     &__name {
@@ -80,16 +83,16 @@
     }
 
     &__text {
-        font-size: 34px;
+        font-size: 28px;
         margin-bottom: 30px;
     }
 
     &__link {
         display: block;
         text-decoration: none;
-        font-size: 34px;
+        font-size: 24px;
         border: 3px solid #F5A42B;
-        width: 240px;
+        width: 100%;
         padding: 20px;
         margin-bottom: 30px;
         color: #000;
