--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,16 +6,54 @@
         align-items: center;
         justify-content: space-between;
     }
+    .burger-menu {
+        display: none;
 
-    img {
-        height: 60px;
-        width: 60px;
+        @media (max-width: 767px) {
+            display: block;
+        }
+
+        img {
+            height: 40px;
+            width: 40px;
+        }
+    }
+    
+    &__navigation {
+        @media (max-width: 767px) {
+            position: absolute;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            top: 45px;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: #F05E22;
+            padding-top: 40px;
+        }
+    }
+
+    &__navigation.active {
+        left: 0;
     }
 
     &__link {
         color: #fff;
         text-decoration: none;
         margin-left: 20px;
+
+        @media (max-width: 767px) { 
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+    }
+
+    &__burger {
+        img {
+            height: 40px;
+            width: 40px;
+        }
     }
 }
 
