--- a/src/scss/profile.scss
+++ b/src/scss/profile.scss
@@ -5,12 +5,12 @@
 
     .container {
         flex: 1 1 auto;
+        max-height: 260px;
     }
     &__content {
         display: flex;
         justify-content: space-between;
         gap: 40px;
-        margin-bottom: 60px;
     }
 
     &__left, &__right {
@@ -43,12 +43,49 @@
         color: #fff;
         background: blue;
     }
+
+    &__history {
+        .container {
+            height: 260px;
+            overflow: hidden;
+        }
+
+        &__container {
+            width: 100%;
+            overflow-x: scroll;
+            
+        }
+
+        &-row {
+            display: flex;
+
+            width: 1360px;
+        }
+
+        &-item {
+            width: 340px;
+            padding: 10px;
+            text-align: left;
+            border: 1px solid #F05E22;
+        }
+    }
 }
 
 @media (max-width: 870px) {
     .profile {
+
+        .container {
+            max-height: 500px;
+        }
         &__content {
             flex-direction: column;
+            justify-content: flex-start;
+        }
+
+        &__history {
+            &-item {
+                width: 200px;
+            }
         }
     }
 }
