--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -65,5 +65,15 @@
             color: #00FF00;
             font-size: 18px;
         }
+
+        &-false {
+            color: red;
+        }
     }
+
+    
 }
+
+.buckk {
+        opacity: 0 !important;
+    }
